<resources>
    <string name="app_name">HappyTourist</string>
    <string name="happyTourist">Happy Tourist Reykjavík </string>
    <string name="welcome">Welcome to Happy Tourist Reykjavík </string>

    <!--Happy Tourist main activity-->
    <string name="weatherForecast">Weather</string>
    <string name="myReviews">My Reviews</string>
    <string name="auroraForecast">Aurora</string>
    <string name="events">Events</string>
    <string name="map">Map</string>
    <string name="currencyConverter">Currency Converter</string>
    <string name="usefulInfo">Useful Information</string>
    <string name="login">Login</string>
    <string name="logout">Log Out</string>



    <string name="eventCinema">Cinema</string>
    <string name="eventConcert">Concert</string>
    <string name="eventSports">Sports</string>
    <string name="sportsFootball">Football Events</string>
    <string name="sportsHandball">Handball Events</string>
    <string name="infoPhrases">Phrases</string>
    <string name="infoUsefulPhoneNumbers">Useful Phone Numbers</string>

    <string name="change_city">Change city</string>
    <string name="open_weather_maps_app_id">d8c07ce9918863952caaac0572435749</string>
    <string name="weather_sunny">&#xf00d;</string>
    <string name="weather_clear_night">&#xf02e;</string>
    <string name="weather_foggy">&#xf014;</string>
    <string name="weather_cloudy">&#xf013;</string>
    <string name="weather_rainy">&#xf019;</string>
    <string name="weather_snowy">&#xf01b;</string>
    <string name="weather_thunder">&#xf01e;</string>
    <string name="weather_drizzle">&#xf01c;</string>

    <string name="place_not_found">Sorry, no weather data found.</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_currency">CurrencyActivity</string>
    <string name="action_settings">Settings</string>
    <string-array name="spinnerCurrencyShortName">
        <item>USD</item>
        <item>GBP</item>
        <item>EUR</item>
        <item>CAD</item>
        <item>DKK</item>
        <item>NOK</item>
        <item>SEK</item>
        <item>CHF</item>
        <item>JPY</item>
    </string-array>

    <!-- Sign-in status messages -->
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>
    <string name="loading">Loading…</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>

    <!-- Google Play Services error for Toast -->
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>

    <!-- Button labels -->
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>

    <!-- Content Description for images -->
    <string name="desc_google_icon">Google Logo</string>

    <!-- Rationale for asking for Contacts -->
    <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>

    <!-- Activity Names and Descriptions -->
    <string name="name_sign_in_activity">SignInActivity</string>
    <string name="desc_sign_in_activity">Signing in, signing out, and revoking access.</string>
    <string name="desc_sign_in_activity_scopes">Signing in, signing out, and revoking access with Google Drive permissions.</string>
    <string name="name_id_token_activity">IdTokenActivity</string>
    <string name="desc_id_token_activity">Retrieving an ID Token for the user.</string>
    <string name="desc_auth_code_activity">Demonstrate retrieving an auth code for authorizing your server.</string>
    <string name="name_auth_code_activity">ServerAuthCodeActivity</string>

    <!-- TODO(user): replace with your real server client ID -->
    <!-- Server Client ID.  This should be a valid Web OAuth 2.0 Client ID obtained
         from https://console.developers.google.com/ -->
    <string name="server_client_id">YOUR_SERVER_CLIENT_ID</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_review">ReviewActivity</string>
    <string name="title_activity_my_reviews">MyReviewsActivity</string>
    <string name="title_activity_reviews">ReviewsActivity</string>

</resources>

