<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnCinema"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eventCinema"/>

            <Button
                android:id="@+id/btnConcerts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eventConcert"/>

            <Button
                android:id="@+id/btnSports"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eventSports"/>

        </LinearLayout>

        <TextView
            android:id="@+id/viewEvents"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>